Add some post install steps

--- a/update_2004_to_2404.md
+++ b/update_2004_to_2404.md
@@ -77,3 +77,13 @@ updated / removed e.t.c. Continue with `y` - NB: Some of the large packages will
 You may get 1/2 other prompts about needing to keep the existing version and continuing - do this
 
 If prompted to reboot afterwards do so
+
+```shell
+# Post update lets check the version - should say 24.04 noble
+$ lsb_release -a
+# Then delete the TCP updates we did to permit the upgrade
+$ ufw delete allow 1022/tcp
+# Check these next 2 commands out
+$ ls -l etc/apt/sources.list.d/
+$ sudo apt autoremove --purge
+```
