Run upgrade as sudo

--- a/update_2004_to_2404.md
+++ b/update_2004_to_2404.md
@@ -34,7 +34,7 @@ that the initial steps have worked
 # Check you're on a supported OS - Should say VERSION="22.04.3 LTS (Jammy Jellyfish)"
 $ cat /etc/os-release
 # Check all packages are up to date
-$ sudo apt-get update && apt-get upgrade -y
+$ sudo apt-get update && sudo apt-get upgrade -y
 ```
 
 ## Upgrading from 22.04 to 24.04
