Use sudo for 22.04 upgrade

--- a/update_2004_to_2404.md
+++ b/update_2004_to_2404.md
@@ -50,7 +50,7 @@ NB: Currently some of the tasks required need to be done manually and aren't inc
 # Grab all upgradable packages beforehand
 $ sudo apt list --upgradable
 # Check all packages are up to date
-$ sudo apt-get update && apt-get upgrade -y
+$ sudo apt-get update && sudo apt-get upgrade -y
 # Manually set up a TCP port (required to be done manually)
 $ sudo ufw allow 1022/tcp
 $ sudo ufw reload
