Enable firewall rules before reloading

--- a/update_2004_to_2404.md
+++ b/update_2004_to_2404.md
@@ -53,6 +53,7 @@ $ sudo apt list --upgradable
 $ sudo apt-get update && sudo apt-get upgrade -y
 # Manually set up a TCP port (required to be done manually)
 $ sudo ufw allow 1022/tcp
+$ sudo ufw enable
 $ sudo ufw reload
 $ sudo ufw status
 # Check the image below to see if it's upgraded correctly
@@ -61,9 +62,8 @@ $ sudo ufw status
 ![tcp_1022_port.png](tcp_1022_port.png)
 
 ```shell
-# Install the update manager
-$ sudo apt-get install ubuntu-release-upgrader-core
-$ sudo apt install update-manager-core
+# Install the update manager packages
+$ sudo apt-get install ubuntu-release-upgrader-core update-manager-core
 # Run the update command
 $ sudo do-release-upgrade -d
 ```
