Delete ufw rules as sudo

--- a/update_2004_to_2404.md
+++ b/update_2004_to_2404.md
@@ -82,7 +82,7 @@ If prompted to reboot afterwards do so
 # Post update lets check the version - should say 24.04 noble
 $ lsb_release -a
 # Then delete the TCP updates we did to permit the upgrade
-$ ufw delete allow 1022/tcp
+$ sudo ufw delete allow 1022/tcp
 # Check these next 2 commands out
 $ ls -l etc/apt/sources.list.d/
 $ sudo apt autoremove --purge
