Check folder status out correctly

--- a/update_2004_to_2404.md
+++ b/update_2004_to_2404.md
@@ -84,6 +84,6 @@ $ lsb_release -a
 # Then delete the TCP updates we did to permit the upgrade
 $ sudo ufw delete allow 1022/tcp
 # Check these next 2 commands out
-$ ls -l etc/apt/sources.list.d/
+$ ls -l /etc/apt/sources.list.d/
 $ sudo apt autoremove --purge
 ```
