Final tweaks to upgrade script

--- a/update_2004_to_2404.md
+++ b/update_2004_to_2404.md
@@ -39,12 +39,13 @@ $ sudo apt-get update && sudo apt-get upgrade -y
 
 ## Upgrading from 22.04 to 24.04
 
-Based on these articles: 
+Based on these articles:
+- https://www.cyberciti.biz/faq/how-to-upgrade-from-ubuntu-22-04-lts-to-ubuntu-24-04-lts/
 - https://jumpcloud.com/blog/how-to-upgrade-ubuntu-22-04-to-ubuntu-24-04#:~:text=It%20is%20worth%20noting%20that,of%20Ubuntu%20before%20you%20upgrade.
 - https://linuxconfig.org/ubuntu-upgrade-to-24-04-noble-numbat-a-step-by-step-howto-guide
 
 NB: Currently some of the tasks required need to be done manually and aren't included in the auto-update package
-(This may change in time)
+(This may change in time - i.e. by August's release of `24.04.1`)
 
 ```shell
 # Grab all upgradable packages beforehand
@@ -64,7 +65,16 @@ $ sudo ufw status
 ```shell
 # Install the update manager packages
 $ sudo apt-get install ubuntu-release-upgrader-core update-manager-core
-# Run the update command
+```
+
+### What version of the LTS is released?
+
+If the version of the LTS is `xx.04.1` then you are in luck, and a direct update to said
+LTS is possible. If it's just a `xx.04` then it's not. You will need to upgrade in 2 "chunks"
+
+#### xx.04.1
+
+```shell
 $ sudo do-release-upgrade -d
 ```
 
@@ -80,6 +90,56 @@ If prompted to reboot afterwards do so
 
 ```shell
 # Post update lets check the version - should say 24.04 noble
+$ lsb_release -a
+# Then delete the TCP updates we did to permit the upgrade
+$ sudo ufw delete allow 1022/tcp
+# Check these next 2 commands out
+$ ls -l /etc/apt/sources.list.d/
+$ sudo apt autoremove --purge
+```
+
+#### xx.04
+
+```shell
+# Change the line Prompt=lts to Prompt=normal
+$ sudo vi /etc/update-manager/release-upgrades
+# Run the command to upgrade to the `.10` version directly before the LTS version
+# In this instance it is 23.10 Mantic Minotaur
+$ sudo do-release-upgrade
+```
+
+It will then do a few auto-update prompts before giving you a prompt for a daemon socket on TCP port 1022.
+Say `y` to this. It will then give you a large prompt for the final full update
+
+It should be several hundred MB or possibly close to 1GB in size. It will mention hundreds of packages being
+updated / removed e.t.c. Continue with `y` - NB: Some of the large packages will be linux firmware ones
+
+You may get 1/2 other prompts about needing to keep the existing version and continuing - do this
+
+If prompted to reboot afterwards do so
+
+```shell
+# Post update lets check the version - should say 23.10 mantic
+$ lsb_release -a
+# Check these next 2 commands out
+$ ls -l /etc/apt/sources.list.d/
+$ sudo apt autoremove --purge
+```
+
+Then you need to undo the `Prompt=normal` change
+
+```shell
+# Change the line Prompt=normal to Prompt=lts
+$ sudo vi /etc/update-manager/release-upgrades
+# Run the command to upgrade to the `.04` LTS version
+$ sudo do-release-upgrade -d
+```
+
+Now we can check the update worked
+
+```shell
+# Post update lets check the version - should say 24.04 noble
+$ cat /etc/os-release
 $ lsb_release -a
 # Then delete the TCP updates we did to permit the upgrade
 $ sudo ufw delete allow 1022/tcp
